[package]
name = "traceflow"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
pnet = "0.34"
tokio = { version = "1.37", features = ["full"] }
maxminddb = "0.24"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hickory-resolver = "0.24"
nix = { version = "0.28", features = ["user"] }
libc = "0.2"
crossbeam-channel = "0.5"
clap = { version = "4.5", features = ["derive"] }
tls-parser = "0.11"
procfs = "0.16"
ipnetwork = "0.20"
pcap = "2.0"
notify = "6.1"
memmap2 = "0.9"
bincode = "1.3"
sysinfo = "0.30"

[[bin]]
name = "traceflow"
path = "src/main.rs"

[[bin]]
name = "traceflow-helper"
path = "src/bin/traceflow-helper.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
